POWR-727 create menu enablement field group; update views to match path patterns; patch display suite

--- a/composer.json
+++ b/composer.json
@@ -176,6 +176,9 @@
             },
             "drupal/embed": {
                 "2824110 - Allow site-builders to use a non-managed file as button icon": "https://www.drupal.org/files/issues/2018-07-03/embed-allow-non-managed-button-icon-files-2824110-9.patch"
+            },
+            "drupal/ds": {
+                "276167 - Content tokens are not usable in prefix and suffix": "https://www.drupal.org/files/issues/2018-12-20/ds-prefix-suffix-tokens-3x-2761767-24.patch"
             }
         },
         "merge-plugin": {
