--- a/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_form_display.group.bureau_office.default.yml
@@ -7,6 +7,14 @@ dependencies:
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
     - field.field.group.bureau_office.field_email
+    - field.field.group.bureau_office.field_enable_documents_menu_item
+    - field.field.group.bureau_office.field_enable_events_menu_item
+    - field.field.group.bureau_office.field_enable_guides_and_informat
+    - field.field.group.bureau_office.field_enable_news_and_notices_me
+    - field.field.group.bureau_office.field_enable_offices_and_program
+    - field.field.group.bureau_office.field_enable_programs_menu_item
+    - field.field.group.bureau_office.field_enable_projects_menu_item
+    - field.field.group.bureau_office.field_enable_services_and_inform
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
@@ -33,7 +41,7 @@ third_party_settings:
         - field_email
         - field_building
       parent_name: ''
-      weight: 8
+      weight: 3
       format_type: fieldset
       format_settings:
         label: 'Contact Information'
@@ -42,7 +50,27 @@ third_party_settings:
         classes: ''
         required_fields: false
       label: 'Contact Information'
-      region: hidden
+      region: content
+    group_group_menu:
+      children:
+        - field_enable_services_and_inform
+        - field_enable_guides_and_informat
+        - field_enable_news_and_notices_me
+        - field_enable_events_menu_item
+        - field_enable_documents_menu_item
+        - field_enable_offices_and_program
+        - field_enable_programs_menu_item
+        - field_enable_projects_menu_item
+      parent_name: ''
+      weight: 9
+      format_type: fieldset
+      format_settings:
+        id: ''
+        classes: ''
+        description: 'Turn on menu items for types of content in your site.'
+        required_fields: true
+      label: 'Site menu'
+      region: content
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
@@ -56,7 +84,7 @@ content:
     type: address_default
     region: content
   field_audience:
-    weight: 4
+    weight: 5
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
@@ -78,8 +106,64 @@ content:
     third_party_settings: {  }
     type: email_default
     region: content
+  field_enable_documents_menu_item:
+    weight: 29
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_events_menu_item:
+    weight: 28
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_guides_and_informat:
+    weight: 26
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_news_and_notices_me:
+    weight: 27
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_offices_and_program:
+    weight: 30
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_programs_menu_item:
+    weight: 31
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_projects_menu_item:
+    weight: 32
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
+  field_enable_services_and_inform:
+    weight: 25
+    settings:
+      display_label: true
+    third_party_settings: {  }
+    type: boolean_checkbox
+    region: content
   field_legacy_path:
-    weight: 9
+    weight: 10
     settings:
       size: 60
       placeholder: ''
@@ -103,7 +187,7 @@ content:
     type: string_textfield
     region: content
   field_parent_group:
-    weight: 3
+    weight: 4
     settings:
       match_operator: CONTAINS
       size: 60
@@ -128,7 +212,7 @@ content:
     type: string_textfield
     region: content
   field_summary:
-    weight: 6
+    weight: 8
     settings:
       rows: 2
       placeholder: ''
@@ -141,7 +225,7 @@ content:
     type: string_textarea
     region: content
   field_topics:
-    weight: 5
+    weight: 6
     settings: {  }
     third_party_settings: {  }
     type: chosen_select
