--- a/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
+++ b/web/sites/default/config/core.entity_view_display.group.bureau_office.default.yml
@@ -7,6 +7,14 @@ dependencies:
     - field.field.group.bureau_office.field_audience
     - field.field.group.bureau_office.field_building
     - field.field.group.bureau_office.field_email
+    - field.field.group.bureau_office.field_enable_documents_menu_item
+    - field.field.group.bureau_office.field_enable_events_menu_item
+    - field.field.group.bureau_office.field_enable_guides_and_informat
+    - field.field.group.bureau_office.field_enable_news_and_notices_me
+    - field.field.group.bureau_office.field_enable_offices_and_program
+    - field.field.group.bureau_office.field_enable_programs_menu_item
+    - field.field.group.bureau_office.field_enable_projects_menu_item
+    - field.field.group.bureau_office.field_enable_services_and_inform
     - field.field.group.bureau_office.field_legacy_path
     - field.field.group.bureau_office.field_logo
     - field.field.group.bureau_office.field_official_organization_name
@@ -18,6 +26,7 @@ dependencies:
     - group.type.bureau_office
   module:
     - ds
+    - field_group
 third_party_settings:
   ds:
     layout:
@@ -29,11 +38,350 @@ third_party_settings:
     regions:
       content:
         - field_summary
+        - group_group_menu
+        - field_enable_services_and_inform
+        - field_enable_guides_and_informat
+        - field_enable_news_and_notices_me
+        - field_enable_events_menu_item
+        - field_enable_documents_menu_item
+        - field_enable_offices_and_program
+        - field_enable_programs_menu_item
+        - field_enable_projects_menu_item
+  field_group:
+    group_group_menu:
+      children:
+        - field_enable_services_and_inform
+        - field_enable_guides_and_informat
+        - field_enable_news_and_notices_me
+        - field_enable_events_menu_item
+        - field_enable_documents_menu_item
+        - field_enable_offices_and_program
+        - field_enable_programs_menu_item
+        - field_enable_projects_menu_item
+      parent_name: ''
+      weight: 1
+      format_type: html_element
+      format_settings:
+        label: ''
+        element: ul
+        show_label: false
+        label_element: h3
+        attributes: ''
+        effect: none
+        speed: fast
+        id: ''
+        classes: 'nav nav-group'
+      label: ''
+      region: content
 id: group.bureau_office.default
 targetEntityType: group
 bundle: bureau_office
 mode: default
 content:
+  field_enable_documents_menu_item:
+    type: boolean
+    weight: 22
+    region: content
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: Documents
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/documents" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+  field_enable_events_menu_item:
+    weight: 21
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: Events
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/events" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+    type: boolean
+    region: content
+  field_enable_guides_and_informat:
+    type: boolean
+    weight: 19
+    region: content
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: 'Guides and information'
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/pages" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+  field_enable_news_and_notices_me:
+    weight: 20
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: 'News and notices'
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/news" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+    type: boolean
+    region: content
+  field_enable_offices_and_program:
+    type: boolean
+    weight: 23
+    region: content
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: 'Offices and programs'
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/offices" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+  field_enable_programs_menu_item:
+    weight: 24
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: Programs
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/programs" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+    type: boolean
+    region: content
+  field_enable_projects_menu_item:
+    type: boolean
+    weight: 25
+    region: content
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: Projects
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/projects" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
+  field_enable_services_and_inform:
+    type: boolean
+    weight: 18
+    region: content
+    label: hidden
+    settings:
+      format: custom
+      format_custom_true: 'Services and information'
+      format_custom_false: ''
+    third_party_settings:
+      ds:
+        ft:
+          id: expert
+          settings:
+            lb: ''
+            prefix: '<li class="nav-item"><a href="[group:url]/services" class="nav-link">'
+            lbw-el: ''
+            lbw-cl: ''
+            lbw-at: ''
+            ow-el: ''
+            ow-cl: ''
+            ow-at: ''
+            fis-el: ''
+            fis-cl: ''
+            fis-at: ''
+            fi-el: ''
+            fi-cl: ''
+            fi-at: ''
+            suffix: '</a></li>'
+            lbw: false
+            lb-col: false
+            ow: false
+            ow-def-at: false
+            ow-def-cl: false
+            fis: false
+            fis-def-at: false
+            fi: false
+            fi-def-at: false
   field_summary:
     type: string
     weight: 0
