--- a/web/sites/default/config/views.view.group_offices.yml
+++ b/web/sites/default/config/views.view.group_offices.yml
@@ -1,16 +1,18 @@
-uuid: bc3fe0cb-fbb4-4202-b4f6-ea07dbf335bd
+uuid: d933d21b-7fe6-4170-89bc-0e0b9c7983cc
 langcode: en
 status: true
 dependencies:
   config:
     - field.storage.group.field_summary
+    - group.type.bureau_office
     - group.type.program
   module:
     - group
-id: group_programs
-label: 'Group: Programs'
+    - user
+id: group_offices
+label: 'Group: Offices'
 module: views
-description: 'A list of all the programs that are a child to another group'
+description: 'A list of all the offices and programs that are a child to another group'
 tag: Group
 base_table: groups_field_data
 base_field: id
@@ -23,8 +25,9 @@ display:
     position: 0
     display_options:
       access:
-        type: none
-        options: {  }
+        type: perm
+        options:
+          perm: 'access content'
       cache:
         type: tag
         options: {  }
@@ -205,6 +208,7 @@ display:
           admin_label: ''
           operator: in
           value:
+            bureau_office: bureau_office
             program: program
           group: 1
           exposed: false
@@ -252,7 +256,7 @@ display:
           entity_type: group
           entity_field: label
           plugin_id: standard
-      title: Programs
+      title: 'Offices and programs'
       header: {  }
       footer: {  }
       empty: {  }
@@ -316,95 +320,10 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user.permissions
       tags:
         - 'config:field.storage.group.field_summary'
         - extensions
-  block_1:
-    display_plugin: block
-    id: block_1
-    display_title: Block
-    position: 2
-    display_options:
-      display_extenders: {  }
-      fields:
-        label:
-          id: label
-          table: groups_field_data
-          field: label
-          relationship: none
-          group_type: group
-          admin_label: ''
-          label: ''
-          exclude: false
-          alter:
-            alter_text: false
-            text: ''
-            make_link: false
-            path: ''
-            absolute: false
-            external: false
-            replace_spaces: false
-            path_case: none
-            trim_whitespace: false
-            alt: ''
-            rel: ''
-            link_class: ''
-            prefix: ''
-            suffix: ''
-            target: ''
-            nl2br: false
-            max_length: 0
-            word_boundary: true
-            ellipsis: true
-            more_link: false
-            more_link_text: ''
-            more_link_path: ''
-            strip_tags: false
-            trim: false
-            preserve_tags: ''
-            html: false
-          element_type: ''
-          element_class: ''
-          element_label_type: ''
-          element_label_class: ''
-          element_label_colon: false
-          element_wrapper_type: ''
-          element_wrapper_class: ''
-          element_default_classes: true
-          empty: ''
-          hide_empty: false
-          empty_zero: false
-          hide_alter_empty: true
-          click_sort_column: value
-          type: string
-          settings:
-            link_to_entity: true
-          group_column: value
-          group_columns: {  }
-          group_rows: true
-          delta_limit: 0
-          delta_offset: 0
-          delta_reversed: false
-          delta_first_last: false
-          multi_type: separator
-          separator: ', '
-          field_api_classes: false
-          entity_type: null
-          entity_field: label
-          plugin_id: field
-      defaults:
-        fields: false
-        empty: false
-      block_hide_empty: true
-      empty: {  }
-    cache_metadata:
-      max-age: -1
-      contexts:
-        - 'languages:language_content'
-        - 'languages:language_interface'
-        - route
-        - url
-      tags: {  }
   page_1:
     display_plugin: page
     id: page_1
@@ -412,7 +331,7 @@ display:
     position: 1
     display_options:
       display_extenders: {  }
-      path: group/%group/programs
+      path: group/%group/offices
       defaults:
         pager: true
         style: false
@@ -437,6 +356,7 @@ display:
         - 'languages:language_interface'
         - route
         - url
+        - user.permissions
       tags:
         - 'config:field.storage.group.field_summary'
         - extensions
