--- a/web/sites/default/config/views.view.group_pages.yml
+++ b/web/sites/default/config/views.view.group_pages.yml
@@ -1,4 +1,4 @@
-uuid: 6d5d171c-a2f5-466d-811b-a9bc60d8de7d
+uuid: 504d91d8-4c2f-424d-94b9-1649c450901b
 langcode: en
 status: true
 dependencies:
@@ -10,11 +10,11 @@ dependencies:
     - group
     - node
     - user
-id: group_services_and_information
-label: 'Group: Services and information'
+id: group_pages
+label: 'Group: Pages'
 module: views
-description: 'A set of views to help show services that are related to a group.'
-tag: ''
+description: 'Shows pages of all types (guide, information, etc.) for use with groups that have pages but not services'
+tag: Group
 base_table: node_field_data
 base_field: nid
 core: 8.x
@@ -169,7 +169,7 @@ display:
           entity_type: node
           entity_field: title
           plugin_id: standard
-      title: 'Services and information'
+      title: 'Guides and information'
       header: {  }
       footer: {  }
       empty: {  }
@@ -252,7 +252,7 @@ display:
     position: 2
     display_options:
       display_extenders: {  }
-      path: group/%group/services-info
+      path: group/%group/pages
       filters:
         status:
           value: '1'
