--- a/web/sites/default/config/views.view.group_projects.yml
+++ b/web/sites/default/config/views.view.group_projects.yml
@@ -8,10 +8,10 @@ dependencies:
   module:
     - group
 id: group_projects
-label: 'Group: projects'
+label: 'Group: Projects'
 module: views
-description: 'Projects under certain group.'
-tag: ''
+description: 'A list of all the projects that are a child to another group'
+tag: Group
 base_table: groups_field_data
 base_field: id
 core: 8.x
@@ -66,6 +66,13 @@ display:
             next: ››
       style:
         type: html_list
+        options:
+          grouping: {  }
+          row_class: ''
+          default_row_class: true
+          type: ul
+          wrapper_class: ''
+          class: ''
       row:
         type: fields
       fields:
@@ -297,6 +304,7 @@ display:
         - url.query_args
       tags:
         - 'config:field.storage.group.field_summary'
+        - extensions
   block_1:
     display_plugin: block
     id: block_1
@@ -397,6 +405,12 @@ display:
     display_options:
       display_extenders: {  }
       path: group/%group/projects
+      pager:
+        type: none
+        options:
+          offset: 0
+      defaults:
+        pager: false
     cache_metadata:
       max-age: -1
       contexts:
@@ -404,6 +418,6 @@ display:
         - 'languages:language_interface'
         - route
         - url
-        - url.query_args
       tags:
         - 'config:field.storage.group.field_summary'
+        - extensions
