POWR-759-1 Update Cloudy breakpoints config file and remap paragraph images

--- a/web/themes/custom/cloudy/cloudy.breakpoints.yml
+++ b/web/themes/custom/cloudy/cloudy.breakpoints.yml
@@ -1,24 +1,24 @@
-cloudy.small:
-  label: small
-  mediaQuery: 'all and (min-width: 34em) and (max-width: 47em)'
-  weight: 0
-  multipliers:
-    - 1x
-cloudy.medium:
-  label: medium
-  mediaQuery: 'all and (min-width: 48em) and (max-width: 61em)'
+cloudy.media-breakpoint-up-sm:
+  label: media-breakpoint-up(sm)
+  mediaQuery: 'all and (min-width: 576px)'
   weight: 1
   multipliers:
     - 1x
-cloudy.large:
-  label: large
-  mediaQuery: 'all and (min-width: 62em) and (max-width: 74em)'
-  weight: 2
+cloudy.media-breakpoint-up-md:
+  label: media-breakpoint-up(md)
+  mediaQuery: 'all and (min-width: 768px)'
+  weight: 1
   multipliers:
     - 1x
-cloudy.extra:
-  label: extra
-  mediaQuery: 'all and (min-width: 75em)'
-  weight: 3
+cloudy.media-breakpoint-up-lg:
+  label: media-breakpoint-up(lg)
+  mediaQuery: 'all and (min-width: 992px)'
+  weight: 1
+  multipliers:
+    - 1x
+cloudy.media-breakpoint-up-xl:
+  label: media-breakpoint-up(xl)
+  mediaQuery: 'all and (min-width: 1200px)'
+  weight: 1
   multipliers:
     - 1x
