--- a/web/sites/default/config/responsive_image.styles.paragraph_image.yml
+++ b/web/sites/default/config/responsive_image.styles.paragraph_image.yml
@@ -14,22 +14,22 @@ id: paragraph_image
 label: 'Paragraph image'
 image_style_mappings:
   -
-    breakpoint_id: cloudy.extra
+    breakpoint_id: cloudy.media-breakpoint-up-xl
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: responsive_extra
   -
-    breakpoint_id: cloudy.large
+    breakpoint_id: cloudy.media-breakpoint-up-lg
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: responsive_large
   -
-    breakpoint_id: cloudy.medium
+    breakpoint_id: cloudy.media-breakpoint-up-md
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: responsive_medium
   -
-    breakpoint_id: cloudy.small
+    breakpoint_id: cloudy.media-breakpoint-up-sm
     multiplier: 1x
     image_mapping_type: image_style
     image_mapping: res
